--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -23,37 +23,37 @@
     <div id="case_sup">
         <div class="card card-1">
             <div id="modele_case_1">
-                <img class="image_member" src="images/user.png"/>
+                <img class="image_member1" src="images/user.png"/>
                 <div id="case_1_text">
                     <p id="member_count_number" th:text="${session.members.size()}"></p>
-                    <p id="member_count">Membres</p>
+                    <p id="member_count1">Membres</p>
                 </div>
             </div>
         </div>
         <div class="card card-1">
             <div id="modele_case_1">
-                <img class="image_member" src="images/donnant.png"/>
+                <img class="image_member2" src="images/donnant.png"/>
                 <div id="case_2_text">
                     <p id="member_count_number">3 €</p>
-                    <p id="member_count">de collectes</p>
+                    <p id="member_count2">de collectes</p>
                 </div>
             </div>
         </div>
         <div class="card card-1">
             <div id="case_4">
-                <img class="image_member" src="images/verifie.png"/>
+                <img class="image_member4" src="images/verifie.png"/>
                 <div id="case_4_text">
                     <p id="member_count_number" th:text="${session.date}"></p>
-                    <p id="member_count">Avant expiration</p>
+                    <p id="member_count4">Avant expiration</p>
                 </div>
             </div>
         </div>
         <div class="card_2 card-1">
             <div id="case_5">
-                <img class="image_member" src="images/new_member.png"/>
+                <img class="image_member5" src="images/new_member.png"/>
                 <div id=case_5_text>
-                    <p id="member_count_number" th:text="${session.membersinmonth.size()}"></p>
-                    <p id="member_count">durant ce mois</p>
+                    <p id="member_count_number5" th:text="${session.membersinmonth.size()}"></p>
+                    <p id="member_count5">durant ce mois</p>
                 </div>
             </div>
         </div>
