--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -10,7 +10,7 @@ body{
     background: linear-gradient(135deg,#71b7e6,#9b59b6);
 }
 .sidebar{
-    width: 245px;
+    width: 18%;
     position: fixed;
     left: 0;
     top: 0;
@@ -20,7 +20,9 @@ body{
     min-width: 100px;
 }
 .main-content{
-    margin-left: 245px;
+    margin-left: 250px;
+    width: 75%;
+    height: 100%;
 }
 a{
     position: relative;
@@ -107,7 +109,7 @@ header{
 }
 header h1{
     color: white;
-    margin-left: 30px;
+    margin-left: 1%;
 }
 .logo{
     width: 100px;
@@ -128,43 +130,36 @@ case_sup{
 }
 .card {
     background: #fff;
-    border-radius: 2px;
+    border-radius: 5px;
     display: inline-block;
     height: 250px;
-    margin: 0.3rem;
+    margin: 2.5rem;
     position: relative;
-    width: 300px;
-
+    width: 40%;
 }
 .card_2 {
     background: #fff;
-    border-radius: 2px;
+    border-radius: 5px;
     display: inline-block;
     height: 250px;
-    margin: 1rem;
+    margin: 2.5rem;
     position: relative;
-    width: 640px;
-}
-#case_3{
-    position:absolute;left: 90px; top:10px;
+    width: 40%;
 }
 #case_2_text{
-    position:relative;right: 20px; top:0px;
+    position:relative;left: 15px; top:0px;
 }
 #case_4_text{
-    position:relative;right: 25px; top:0px;
-}
-#case_3_text{
-    position:relative;right: 20px; top:0px;
+    position:relative;right: 25px; top:10px;
 }
 #case_5{
-    position:absolute;left: 250px; top:10px;
+    position:absolute;left: 90px; top:20px;
 }
 #case_4{
     position:absolute;left: 100px; top:10px;
 }
 #case_5_text{
-    position:relative;right: 10px; top:0px;
+    position:relative;left: 2px; top:0px;
 }
 #case_sup{
     position:relative;left : 50px;
@@ -173,7 +168,7 @@ case_sup{
     position:relative;right: 20px; top:0px;
 }
 #case_1_text{
-    position:relative;right: 15px; top:0px;
+    position:relative;left: 12px; top:0px;
 }
 #modele_case_1{
     position:absolute;left: 110px; top:10px;
@@ -184,18 +179,51 @@ case_sup{
 
 }
 .card-1:hover {
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    box-shadow: 0 14px 28px rgba(0,0,0,0.55), 0 10px 10px rgba(0,0,0,0.52);
 }
-.image_member{
-    height: 100px;
-    width: 100px;
+.image_member1{
+    height: 120px;
+    width: 120px;
+    margin-left: 20px;
 }
+.image_member2{
+    height: 120px;
+    width: 120px;
+    margin-left: 25px;
+}
+.image_member4{
+    height: 120px;
+    width: 120px;
+    margin-left: 35px;
+}
+.image_member5{
+    height: 120px;
+    width: 120px;
+    margin-left: 35px;
+    margin-bottom: 5px;
+}
+
 #member_count_number{
-    text-align: center;
-    font-size :3vw;
-    font-weight: bold;
+    margin-left: 30%;
+    font-size :1.8vw;
 }
-#member_count{
-    text-align: center;
-    font-size :2vw;
+#member_count_number5{
+    margin-left: 55%;
+    font-size :1.8vw;
+}
+#member_count4{
+    margin-left: 35px;
+    font-size :1.8vw;
+}
+#member_count2{
+    margin-left: 5px;
+    font-size :1.8vw;
+}
+#member_count1{
+    margin-left: 10px;
+    font-size :1.8vw;
+}
+#member_count5{
+    margin-left: 30px;
+    font-size :1.8vw;
 }
