--- a/src/main/resources/templates/billingsuperadmin.html
+++ b/src/main/resources/templates/billingsuperadmin.html
@@ -28,7 +28,7 @@
             <div class="user-details">
                 <div class="input-box">
                     <label class="details" for="creditCard">Prix de l'abonnement</label>
-                    <p th:text="${session.price}"></p>
+                    <p th:text="${session.price}"> €</p>
                 </div>
                 <div class="input-box">
                 </div>
