--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -50,7 +50,7 @@ a:hover:before {
     transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
 }
 a:hover:after {
-    background:#71b7e6;
+    background:transparent;
     width: 100%;
     transition: 0s;
 }
