--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,22 +29,22 @@
         <div class="container">
             <div class="sub-cont">
                 <img class="image" src="images/manageteam.png">
-                <h6 class="descriptionss"> Gestion des adhésion</h6>
+                <h6 class="description"> Gestion des adhésion</h6>
             </div>
             <div class="sub-cont">
                 <img class="image" src="images/paiement.png">
-                <h6 class="descriptionn"> Paiement en ligne</h6>
+                <h6 class="description"> Paiement en ligne</h6>
             </div>
             <div class="sub-cont">
                 <img class="image" src="images/communications.png">
-                <h6 class="descriptionsx"> communication</h6>
+                <h6 class="description"> communication</h6>
             </div>
             <div class="sub-cont">
                 <img class="image" src="images/ticket.png">
                 <h6 class="description"> Billetterie</h6>
             </div>
         </div>
-        <h4 class="title1">Nos formules</h4>
+        <h4 class="title">Nos formules</h4>
         <br>
         <div class="container">
             <div class="sub-cont">
@@ -81,28 +81,28 @@
             </div>
             <div class="sub-cont">
                 <img class="image" src="images/multiscreen.png">
-                <h6 class="description3"> Logiciel responsive</h6>
+                <h6 class="description2"> Logiciel responsive</h6>
             </div>
             <div class="sub-cont">
                 <img class="image" src="images/global.png">
-                <h6 class="desc1"> Accessible partout</h6>
-            </div>
-        </div>
-        <div class="cont-social">
-            <div>
-                <h6 class="description-bottom"> Contactez nous</h6>
-                <img class="imageenvlope" src="images/envelope.png">
-                <a class="link" href="https://mail.google.com/mail/u/0/#inbox">masters@mi.parisdescartes.fr</a>
-            </div>
-            <div>
-                <h6 class="description-bottom"> Suivez nous</h6>
-                <a href="https://www.facebook.com/etudiants.aparisdescartes/"><img class="image-social"
-                                                                                   src="images/facebook.png"></a>
-                <a href="https://math-info.u-paris.fr/"><img class="image-social" src="images/instagram.png"></a>
-                <a href="https://math-info.u-paris.fr/"><img class="image-social" src="images/twitter.png"> </a>
+                <h6 class="description2"> Accessible partout</h6>
             </div>
         </div>
     </div>
 </main>
+<div class="cont-social">
+    <div>
+        <h6 class="description-bottom"> Contactez nous</h6>
+        <img class="imageenvlope" src="images/envelope.png">
+        <a class="link" href="https://mail.google.com/mail/u/0/#inbox">masters@mi.parisdescartes.fr</a>
+    </div>
+    <div>
+        <h6 class="description-bottom"> Suivez nous</h6>
+        <a href="https://www.facebook.com/etudiants.aparisdescartes/"><img class="image-social"
+                                                                           src="images/facebook.png"></a>
+        <a href="https://math-info.u-paris.fr/"><img class="image-social" src="images/instagram.png"></a>
+        <a href="https://math-info.u-paris.fr/"><img class="image-social" src="images/twitter.png"> </a>
+    </div>
+</div>
 </body>
 </html>
