--- a/src/main/resources/static/css/signup.css
+++ b/src/main/resources/static/css/signup.css
@@ -45,12 +45,12 @@ a:after {
     transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
 }
 a:hover:before {
-    background: #9b59b6;
+    background: #71b7e6;
     width: 100%;
     transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
 }
 a:hover:after {
-    background:#71b7e6;
+    background:transparent;
     width: 100%;
     transition: 0s;
 }
@@ -60,8 +60,8 @@ main{
     background: linear-gradient(135deg,#71b7e6,#9b59b6);
 }
 main .head{
-    padding-top: 60px;
-    margin-left: 26vw;
+    padding-top: 10%;
+    text-align: center;
     font-size: 3vw;
     color: white;
 }
@@ -71,11 +71,11 @@ main .head{
     position: center;
 }
 .container{
-    height: 200px;
+    height: 50%;
     width: calc(100% / 4 - 40px);
     margin-bottom: 120px;
     background: #ffff;
-    padding: 60px;
+    padding: 4%;
     box-shadow: 0 0 8px rgba(0,0,0,0.2);
     border-radius: 5px;
 }
@@ -83,7 +83,7 @@ main .head{
     position: center;
 }
 .container .link-box .link{
-    margin-left: 38px;
+    text-align: center;
     font-size: 1.2vw;
 }
 .container .link-box .image1{
