--- a/src/main/resources/static/css/signupmember.css
+++ b/src/main/resources/static/css/signupmember.css
@@ -52,12 +52,12 @@ a:after {
     transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1);
 }
 a:hover:before {
-    background: #9b59b6;
+    background: #71b7e6;
     width: 100%;
     transition: width 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
 }
 a:hover:after {
-    background:#71b7e6;
+    background:transparent;
     width: 100%;
     transition: 0s;
 }
