--- a/src/main/resources/templates/managemembers.html
+++ b/src/main/resources/templates/managemembers.html
@@ -102,14 +102,13 @@
                         <input id="admin" name="admin" type="radio" value="true"> Administrateur
                         <input id="member" name="admin" type="radio" value="false"> Membre
                     </div>
-
                     <div class="input-button1">
                         <input id="addMemberButton" name='addMemberButton' type="submit" value="Ajouter">
                     </div>
                 </div>
-                <br>
-
             </form>
+            <br>
+            <div class="title"><strong>Ajouter des adhérents via Excel</strong></div>
             <div class="input-button2">
                 <form action="/addmemberfromfileconfirm" id="addMemberFromFileConfirm" method="post"
                       enctype="multipart/form-data">
@@ -117,15 +116,19 @@
                            name="file"
                            type="file"
                            accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel">
-                    <input id="addMemberFromFileButton"
-                           name="addMemberFromFileButton"
-                           type="submit"
-                           value="Ajouter"/>
-                </form>
-                <form action="/receivemembersfromfile" method="get">
-                    <button type="submit">Exporter</button>
+                        <input id="addMemberFromFileButton"
+                               name="addMemberFromFileButton"
+                               type="submit"
+                               value="Ajouter"/>
                 </form>
             </div>
+            <br>
+            <div class="title"><strong>Récuperer la liste des membres</strong></div>
+            <form action="/receivemembersfromfile" method="get">
+                <div class="input-button1">
+                    <input id="downloadMemberButton" name='downloadMemberButton' type="submit" value="Exporter">
+                </div>
+            </form>
         </div>
         <div class="tableau">
             <table>
