--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,19 +29,19 @@
         <div class="container">
             <div class="sub-cont">
                 <img class="image" src="images/manageteam.png">
-                <h6 class="description"> Gestion des adhésion</h6>
+                <h6 class="description">Gestion des adhésion</h6>
             </div>
             <div class="sub-cont">
                 <img class="image" src="images/paiement.png">
-                <h6 class="description"> Paiement en ligne</h6>
+                <h6 class="description">Paiement en ligne</h6>
             </div>
             <div class="sub-cont">
                 <img class="image" src="images/communications.png">
-                <h6 class="description"> communication</h6>
+                <h6 class="description">Communication</h6>
             </div>
             <div class="sub-cont">
                 <img class="image" src="images/ticket.png">
-                <h6 class="description"> Billetterie</h6>
+                <h6 class="description">Billetterie</h6>
             </div>
         </div>
         <h4 class="title">Nos formules</h4>
@@ -49,27 +49,27 @@
         <div class="container">
             <div class="sub-cont">
                 <img class="image" src="images/baby.png">
-                <h6 class="descriptions"> Bébé Asso</h6>
-                <h7 class="description1"> 30 personnes</h7>
-                <h6 class="price1"> Gratuit</h6>
+                <h6 class="descriptions">Bébé Asso</h6>
+                <h6 class="description1">30 personnes</h6>
+                <h6 class="price1">Gratuit</h6>
             </div>
             <div class="sub-cont">
                 <img class="image" src="images/up-man.png">
-                <h6 class="descriptions"> Jeune Asso</h6>
-                <h7 class="description1"> 200 personnes</h7>
-                <h6 class="price"> 10€</h6>
+                <h6 class="descriptions">Jeune Asso</h6>
+                <h6 class="description1">200 personnes</h6>
+                <h6 class="price">10 €</h6>
             </div>
             <div class="sub-cont">
                 <img class="image" src="images/man.png">
-                <h6 class="descriptionS"> Homme Asso</h6>
-                <h7 class="description1"> 500 personnes</h7>
-                <h6 class="price"> 20€</h6>
+                <h6 class="descriptionS">Homme Asso</h6>
+                <h6 class="description1">500 personnes</h6>
+                <h6 class="price">20 €</h6>
             </div>
             <div class="sub-cont">
                 <img class="image" src="images/grandfather.png">
-                <h6 class="descriptions"> Vieux Asso</h6>
-                <h7 class="description1"> Plus de 500</h7>
-                <h6 class="price"> 50€</h6>
+                <h6 class="descriptions">Vieux Asso</h6>
+                <h6 class="description1">Plus de 500</h6>
+                <h6 class="price">50 €</h6>
             </div>
         </div>
         <h4 class="title">Avantages de notre solution</h4>
@@ -77,27 +77,27 @@
         <div class="container">
             <div class="sub-cont">
                 <img class="image" src="images/logiciel.png">
-                <h6 class="description2"> Toutes vos fonctionnalités dans un seul logiciel</h6>
+                <h6 class="description2">Toutes vos fonctionnalités dans un seul logiciel</h6>
             </div>
             <div class="sub-cont">
                 <img class="image" src="images/multiscreen.png">
-                <h6 class="description2"> Logiciel responsive</h6>
+                <h6 class="description2">Site web responsive</h6>
             </div>
             <div class="sub-cont">
                 <img class="image" src="images/global.png">
-                <h6 class="description2"> Accessible partout</h6>
+                <h6 class="description2">Accessible partout</h6>
             </div>
         </div>
     </div>
 </main>
 <div class="cont-social">
     <div>
-        <h6 class="description-bottom"> Contactez nous</h6>
+        <h6 class="description-bottom">Contactez nous</h6>
         <img class="imageenvlope" src="images/envelope.png">
         <a class="link" href="https://mail.google.com/mail/u/0/#inbox">masters@mi.parisdescartes.fr</a>
     </div>
     <div>
-        <h6 class="description-bottom"> Suivez nous</h6>
+        <h6 class="description-bottom">Suivez nous</h6>
         <a href="https://www.facebook.com/etudiants.aparisdescartes/"><img class="image-social"
                                                                            src="images/facebook.png"></a>
         <a href="https://math-info.u-paris.fr/"><img class="image-social" src="images/instagram.png"></a>
