--- a/src/main/resources/templates/fragments/topbar.html
+++ b/src/main/resources/templates/fragments/topbar.html
@@ -16,12 +16,9 @@
 <div th:fragment="topbar">
     <nav id="topbar">
         <ul>
-          
-          <li>
-                <a href="/dashboard"
+          <li><a href="/dashboard"
                    th:if="${#strings.contains(#httpServletRequest.requestURI, 'profile')}">Tableau de bord</a></li>
-            <li>
-                <a href="/"
+            <li><a href="/"
                    th:if="${session.subscription == null}">Accueil</a></li>
             <li><a href="/signup"
                    th:if="${session.subscription == null}">Inscription</a></li>
