--- a/src/main/resources/static/css/contact.css
+++ b/src/main/resources/static/css/contact.css
@@ -10,7 +10,7 @@ body{
     background: linear-gradient(135deg,#71b7e6,#9b59b6);
 }
 .sidebar{
-    width: 245px;
+    width: 18%;
     position: fixed;
     left: 0;
     top: 0;
@@ -18,9 +18,8 @@ body{
     background: white;
 }
 .main-content{
-    margin-left: 245px;
+    margin-left: 18%;
     height: 900px;
-
     background: linear-gradient(135deg,#71b7e6,#9b59b6);
 }
 .siderbar-logo{
@@ -67,7 +66,7 @@ header{
 }
 header h1{
     color: white;
-    margin-left: 30px;
+    margin-left:1%;
 }
 h1{
     font-size: 2.6vw;
@@ -158,6 +157,9 @@ form .input-button1{
     border-radius: 5px;
     letter-spacing: 1px;
     background: linear-gradient(135deg,#71b7e6,#9b59b6);
+}
+nav{
+    text-align: right;
 }
 nav ul li{
     display: inline-flex;
