--- a/src/main/resources/static/css/managemembers.css
+++ b/src/main/resources/static/css/managemembers.css
@@ -234,6 +234,9 @@ tr:nth-child(even):hover{
     transform: scale(1.1);
     transition: transform 50ms ease-in;
 }
+nav{
+    text-align: right;
+}
 nav ul li{
     display: inline-flex;
     list-style: none;
